CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_CXX_FLAGS_DEBUG "-g -Wall -Wconversion")
SET(CMAKE_CXX_FLAGS_RELEASE "-Wall -Wconversion")
INCLUDE(FindPkgConfig)

PROJECT(libdkim++)
SET(TARGET_NAME "dkim++")

FILE(GLOB_RECURSE SOURCE_FILES src/*.cpp)

ADD_LIBRARY(${TARGET_NAME} SHARED
	${SOURCE_FILES}
)

IF("${CMAKE_SYSTEM}" MATCHES "Linux")
	SET(LIBRESOLV "resolv")
ENDIF("${CMAKE_SYSTEM}" MATCHES "Linux")

TARGET_LINK_LIBRARIES(${TARGET_NAME}
	ssl
	${LIBRESOLV}
)

INCLUDE_DIRECTORIES(
	${DIRECTORY}
	${CMAKE_SOURCE_DIR}
	/usr/local/include/
)

ENABLE_TESTING()
SUBDIRS(
	tests
	tools
)

SET(CMAKE_INSTALL_PREFIX "/usr/local/")
FILE(GLOB_RECURSE files src/*.hpp)
INSTALL(FILES ${files} DESTINATION include/libdkim++)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/libdkim++.so DESTINATION lib)
