CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_CXX_FLAGS_DEBUG "-g -Wall -Wconversion")
SET(CMAKE_CXX_FLAGS_RELEASE "-Wall -Wconversion")
INCLUDE(FindPkgConfig)
INCLUDE(CheckFunctionExists)

PROJECT(libdkim++)
SET(TARGET_NAME "dkim++")
SET(DKIM_RELEASE "lib${TARGET_NAME}-1.0.4")

FILE(GLOB_RECURSE SOURCE_FILES src/*.cpp)

ADD_LIBRARY(${TARGET_NAME} SHARED
	${SOURCE_FILES}
)

IF("${CMAKE_SYSTEM}" MATCHES "Linux")
	SET(LIBRESOLV "resolv")
ENDIF("${CMAKE_SYSTEM}" MATCHES "Linux")
IF("${CMAKE_SYSTEM}" MATCHES "OpenBSD")
	SET(LIBCRYPTO "crypto")
ENDIF("${CMAKE_SYSTEM}" MATCHES "OpenBSD")
CHECK_FUNCTION_EXISTS(res_ninit HAS_RES_NINIT)

TARGET_LINK_LIBRARIES(${TARGET_NAME}
	ssl
	${LIBCRYPTO}
	${LIBRESOLV}
)

INCLUDE_DIRECTORIES(
	${DIRECTORY}
	${CMAKE_SOURCE_DIR}
	/usr/local/include/
)

ENABLE_TESTING()
SUBDIRS(
	tests
	tools
)

SET(CMAKE_INSTALL_PREFIX "/usr/local/")
FILE(GLOB_RECURSE files src/*.hpp)
INSTALL(FILES ${files} DESTINATION include/libdkim++)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/libdkim++.so DESTINATION lib)

# Make FreeBSD packages
IF (CMAKE_SYSTEM_NAME MATCHES BSD)
SET(CPACK_GENERATOR TBZ2)
SET(CPACK_PACKAGE_FILE_NAME "${DKIM_RELEASE}")
SET(CPACK_INCLUDE_TOPLEVEL_DIRECTORY 0)
INSTALL(CODE "
	IF(\${CMAKE_INSTALL_PREFIX} MATCHES .*/_CPack_Packages/.*) 
		FILE(WRITE  \"\${CMAKE_INSTALL_PREFIX}/+DESC\" \"libdkim++ is a lightweight and portable DKIM (RFC4871) library for *NIX\n\") 
		FILE(WRITE  \"\${CMAKE_INSTALL_PREFIX}/+COMMENT\" \"libdkim++ is a lightweight and portable DKIM (RFC4871)\n\") 
		FILE(WRITE  \"\${CMAKE_INSTALL_PREFIX}/+CONTENTS\" \"@comment PKG_FORMAT_REVISION:1.1\n\")
		FILE(APPEND \"\${CMAKE_INSTALL_PREFIX}/+CONTENTS\" \"@name ${DKIM_RELEASE}\n\")
		FILE(APPEND \"\${CMAKE_INSTALL_PREFIX}/+CONTENTS\" \"@cwd /usr/local\n\")
		FOREACH(file \${CMAKE_INSTALL_MANIFEST_FILES})
			FILE(RELATIVE_PATH file \${CMAKE_INSTALL_PREFIX} \${file})
			FILE(APPEND \"\${CMAKE_INSTALL_PREFIX}/+CONTENTS\" \"\${file}\n\")
		ENDFOREACH()
	ENDIF(\${CMAKE_INSTALL_PREFIX} MATCHES .*/_CPack_Packages/.*) 
")
INCLUDE(CPack)
ENDIF (CMAKE_SYSTEM_NAME MATCHES BSD)
